[project]
name = "Staff"
requires-python = ">=3.8"
dependencies = ["beautifulsoup4", "requests"]
description = "Unofficial Python library to work with data on The StoryGraph."
keywords = ["storygraph", "reading", "books"]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet",
    "Topic :: Utilities",
]
